Data/GrammarMigrated/.antlr/QactorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:\Sviluppo\GitHub\AlmaMaterStudiorum\QActorMigration\QactorParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class QactorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		ID=1, INT=2, STRING=3, ML_COMMENT=4, SL_COMMENT=5, WS=6, ANY_OTHER=7, 
		VARID=8, KCODE=9, QualifiedName=10, DuePuntiSTRING=11, ExternalQActorSTRING=12, 
		MqttBrokerSTRING=13, EventSTRING=14, SignalSTRING=15, TokenSTRING=16, 
		DispatchSTRING=17, RequestCapitalSTRING=18, ReplySTRING=19, InvitationSTRING=20, 
		Context=21, IpSTRING=22, MqttSTRING=23, OpenSquareSTRING=24, HostSTRING=25, 
		PortSTRING=26, CloseSquareSTRING=27, CodedQActorSTRING=28, QActorSTRING=29, 
		ContextBNoCapitalLetterSTRING=30, ClassNameSTRING=31, OpenBraceSTRING=32, 
		CloseBraceSTRING=33, StateSTRING=34, InitialSTRING=35, IfSolvedSTRING=36, 
		ElseSTRING=37, PrintCurrentMessageSTRING=38, PrintlnSTRING=39, OpenRoundSTRING=40, 
		CloseRoundSTRING=41, SolveSTRING=42, DiscardMsgSTRING=43, MemoCurrentTimeSTRING=44, 
		SetDurationSTRING=45, OnSTRING=46, OffSTRING=47, FromSTRING=48, ForwardSTRING=49, 
		EmitSTRING=50, MSTRING=51, RequestNoCapitalSTRING=52, ReplyToSTRING=53, 
		AskForSTRING=54, WithSTRING=55, DelaySTRING=56, DelayVarSTRING=57, DelayVarRefSTRING=58, 
		DelaySolSTRING=59, OnMsgSTRING=60, TerminateSTRING=61, UpdateResourceSTRING=62, 
		QrunSTRING=63, MyselfSTRING=64, RunSTRING=65, MachineExecSTRING=66, GotoSTRING=67, 
		IfSTRING=68, TransitionSTRING=69, WhenTimeSTRING=70, ArrowSTRING=71, WhenTimeVarSTRING=72, 
		WhenTimeVarRefSTRING=73, WhenTimeSolSTRING=74, WhenEventSTRING=75, WhenMsgSTRING=76, 
		WhenRequestSTRING=77, WhenReplySTRING=78, AndSTRING=79, VirgilaSTRING=80, 
		SimbolDollarSTRING=81, SimbolHashSTRING=82, SimbolAtSTRING=83;
	public const int
		RULE_qactorSystemSpec = 0, RULE_brokerSpec = 1, RULE_messageX = 2, RULE_outOnlyMessage = 3, 
		RULE_outInMessage = 4, RULE_event = 5, RULE_signal = 6, RULE_token = 7, 
		RULE_dispatch = 8, RULE_request = 9, RULE_reply = 10, RULE_invitation = 11, 
		RULE_contextP = 12, RULE_componentIP = 13, RULE_qActorDeclaration = 14, 
		RULE_qActorExternal = 15, RULE_qActorCoded = 16, RULE_qActor = 17, RULE_state = 18, 
		RULE_stateAction = 19, RULE_ifSolvedAction = 20, RULE_guardedStateAction = 21, 
		RULE_printCurMsg = 22, RULE_print = 23, RULE_solveGoal = 24, RULE_discardMsg = 25, 
		RULE_memoTime = 26, RULE_durationX = 27, RULE_forward = 28, RULE_emit = 29, 
		RULE_demand = 30, RULE_answer = 31, RULE_replyReq = 32, RULE_delay = 33, 
		RULE_delayInt = 34, RULE_delayVar = 35, RULE_delayVref = 36, RULE_delaySol = 37, 
		RULE_msgCond = 38, RULE_endActor = 39, RULE_updateResource = 40, RULE_noMsgCond = 41, 
		RULE_anyAction = 42, RULE_codeRun = 43, RULE_codeRunActor = 44, RULE_codeRunSimple = 45, 
		RULE_exec = 46, RULE_transitionX = 47, RULE_emptyTransition = 48, RULE_nonEmptyTransition = 49, 
		RULE_timeout = 50, RULE_timeoutInt = 51, RULE_timeoutVar = 52, RULE_timeoutVarRef = 53, 
		RULE_timeoutSol = 54, RULE_inputTransition = 55, RULE_eventTransSwitch = 56, 
		RULE_msgTransSwitch = 57, RULE_requestTransSwitch = 58, RULE_replyTransSwitch = 59, 
		RULE_pHead = 60, RULE_pAtom = 61, RULE_pAtomString = 62, RULE_pAtomic = 63, 
		RULE_pAtomNum = 64, RULE_pStructRef = 65, RULE_pStruct = 66, RULE_variableX = 67, 
		RULE_varRef = 68, RULE_varRefInStr = 69, RULE_varSolRef = 70;
	public static readonly string[] ruleNames = {
		"qactorSystemSpec", "brokerSpec", "messageX", "outOnlyMessage", "outInMessage", 
		"event", "signal", "token", "dispatch", "request", "reply", "invitation", 
		"contextP", "componentIP", "qActorDeclaration", "qActorExternal", "qActorCoded", 
		"qActor", "state", "stateAction", "ifSolvedAction", "guardedStateAction", 
		"printCurMsg", "print", "solveGoal", "discardMsg", "memoTime", "durationX", 
		"forward", "emit", "demand", "answer", "replyReq", "delay", "delayInt", 
		"delayVar", "delayVref", "delaySol", "msgCond", "endActor", "updateResource", 
		"noMsgCond", "anyAction", "codeRun", "codeRunActor", "codeRunSimple", 
		"exec", "transitionX", "emptyTransition", "nonEmptyTransition", "timeout", 
		"timeoutInt", "timeoutVar", "timeoutVarRef", "timeoutSol", "inputTransition", 
		"eventTransSwitch", "msgTransSwitch", "requestTransSwitch", "replyTransSwitch", 
		"pHead", "pAtom", "pAtomString", "pAtomic", "pAtomNum", "pStructRef", 
		"pStruct", "variableX", "varRef", "varRefInStr", "varSolRef"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, "':'", 
		"'ExternalQActor'", "'mqttBroker'", "'Event'", "'Signal'", "'Token'", 
		"'Dispatch'", "'Request'", "'Reply'", "'Invitation'", "'Context'", "'ip'", 
		"'+mqtt'", "'['", "'host='", "'port='", "']'", "'CodedQActor'", "'QActor'", 
		"'context'", "'className'", "'{'", "'}'", "'State'", "'initial'", "'ifSolved'", 
		"'else'", "'printCurrentMessage'", "'println'", "'('", "')'", "'solve'", 
		"'discardMsg'", "'memoCurrentTime'", "'setDuration'", "'On'", "'Off'", 
		"'from'", "'forward'", "'emit'", "'-m'", "'request'", "'replyTo'", "'askFor'", 
		"'with'", "'delay'", "'delayVar'", "'delayVarRef'", "'delaySol'", "'onMsg'", 
		"'terminate'", "'updateResource'", "'qrun'", "'myself'", "'run'", "'machineExec'", 
		"'Goto'", "'if'", "'Transition'", "'whenTime'", "'->'", "'whenTimeVar'", 
		"'whenTimeVarRef'", "'whenTimeSol'", "'whenEvent'", "'whenMsg'", "'whenRequest'", 
		"'whenReply'", "'and'", "','", "'$'", "'#'", "'@'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "ID", "INT", "STRING", "ML_COMMENT", "SL_COMMENT", "WS", "ANY_OTHER", 
		"VARID", "KCODE", "QualifiedName", "DuePuntiSTRING", "ExternalQActorSTRING", 
		"MqttBrokerSTRING", "EventSTRING", "SignalSTRING", "TokenSTRING", "DispatchSTRING", 
		"RequestCapitalSTRING", "ReplySTRING", "InvitationSTRING", "Context", 
		"IpSTRING", "MqttSTRING", "OpenSquareSTRING", "HostSTRING", "PortSTRING", 
		"CloseSquareSTRING", "CodedQActorSTRING", "QActorSTRING", "ContextBNoCapitalLetterSTRING", 
		"ClassNameSTRING", "OpenBraceSTRING", "CloseBraceSTRING", "StateSTRING", 
		"InitialSTRING", "IfSolvedSTRING", "ElseSTRING", "PrintCurrentMessageSTRING", 
		"PrintlnSTRING", "OpenRoundSTRING", "CloseRoundSTRING", "SolveSTRING", 
		"DiscardMsgSTRING", "MemoCurrentTimeSTRING", "SetDurationSTRING", "OnSTRING", 
		"OffSTRING", "FromSTRING", "ForwardSTRING", "EmitSTRING", "MSTRING", "RequestNoCapitalSTRING", 
		"ReplyToSTRING", "AskForSTRING", "WithSTRING", "DelaySTRING", "DelayVarSTRING", 
		"DelayVarRefSTRING", "DelaySolSTRING", "OnMsgSTRING", "TerminateSTRING", 
		"UpdateResourceSTRING", "QrunSTRING", "MyselfSTRING", "RunSTRING", "MachineExecSTRING", 
		"GotoSTRING", "IfSTRING", "TransitionSTRING", "WhenTimeSTRING", "ArrowSTRING", 
		"WhenTimeVarSTRING", "WhenTimeVarRefSTRING", "WhenTimeSolSTRING", "WhenEventSTRING", 
		"WhenMsgSTRING", "WhenRequestSTRING", "WhenReplySTRING", "AndSTRING", 
		"VirgilaSTRING", "SimbolDollarSTRING", "SimbolHashSTRING", "SimbolAtSTRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "QactorParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static QactorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public QactorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public QactorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class QactorSystemSpecContext : ParserRuleContext {
		public IToken name;
		public BrokerSpecContext mqttBroker;
		public MessageXContext _messageX;
		public IList<MessageXContext> _message = new List<MessageXContext>();
		public ContextPContext _contextP;
		public IList<ContextPContext> _context = new List<ContextPContext>();
		public QActorDeclarationContext _qActorDeclaration;
		public IList<QActorDeclarationContext> _actor = new List<QActorDeclarationContext>();
		public ITerminalNode ID() { return GetToken(QactorParser.ID, 0); }
		public BrokerSpecContext brokerSpec() {
			return GetRuleContext<BrokerSpecContext>(0);
		}
		public MessageXContext[] messageX() {
			return GetRuleContexts<MessageXContext>();
		}
		public MessageXContext messageX(int i) {
			return GetRuleContext<MessageXContext>(i);
		}
		public ContextPContext[] contextP() {
			return GetRuleContexts<ContextPContext>();
		}
		public ContextPContext contextP(int i) {
			return GetRuleContext<ContextPContext>(i);
		}
		public QActorDeclarationContext[] qActorDeclaration() {
			return GetRuleContexts<QActorDeclarationContext>();
		}
		public QActorDeclarationContext qActorDeclaration(int i) {
			return GetRuleContext<QActorDeclarationContext>(i);
		}
		public QactorSystemSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qactorSystemSpec; } }
	}

	[RuleVersion(0)]
	public QactorSystemSpecContext qactorSystemSpec() {
		QactorSystemSpecContext _localctx = new QactorSystemSpecContext(Context, State);
		EnterRule(_localctx, 0, RULE_qactorSystemSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142; _localctx.name = Match(ID);
			State = 144;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==MqttBrokerSTRING) {
				{
				State = 143; _localctx.mqttBroker = brokerSpec();
				}
			}

			State = 149;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EventSTRING) | (1L << SignalSTRING) | (1L << TokenSTRING) | (1L << DispatchSTRING) | (1L << RequestCapitalSTRING) | (1L << ReplySTRING) | (1L << InvitationSTRING))) != 0)) {
				{
				{
				State = 146; _localctx._messageX = messageX();
				_localctx._message.Add(_localctx._messageX);
				}
				}
				State = 151;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 155;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Context) {
				{
				{
				State = 152; _localctx._contextP = contextP();
				_localctx._context.Add(_localctx._contextP);
				}
				}
				State = 157;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 161;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ExternalQActorSTRING) | (1L << CodedQActorSTRING) | (1L << QActorSTRING))) != 0)) {
				{
				{
				State = 158; _localctx._qActorDeclaration = qActorDeclaration();
				_localctx._actor.Add(_localctx._qActorDeclaration);
				}
				}
				State = 163;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BrokerSpecContext : ParserRuleContext {
		public IToken brokerHost;
		public IToken brokerPort;
		public ITerminalNode MqttBrokerSTRING() { return GetToken(QactorParser.MqttBrokerSTRING, 0); }
		public ITerminalNode DuePuntiSTRING() { return GetToken(QactorParser.DuePuntiSTRING, 0); }
		public ITerminalNode STRING() { return GetToken(QactorParser.STRING, 0); }
		public ITerminalNode INT() { return GetToken(QactorParser.INT, 0); }
		public BrokerSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_brokerSpec; } }
	}

	[RuleVersion(0)]
	public BrokerSpecContext brokerSpec() {
		BrokerSpecContext _localctx = new BrokerSpecContext(Context, State);
		EnterRule(_localctx, 2, RULE_brokerSpec);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 164; Match(MqttBrokerSTRING);
			State = 165; _localctx.brokerHost = Match(STRING);
			State = 166; Match(DuePuntiSTRING);
			State = 167; _localctx.brokerPort = Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MessageXContext : ParserRuleContext {
		public OutOnlyMessageContext outOnlyMessage() {
			return GetRuleContext<OutOnlyMessageContext>(0);
		}
		public OutInMessageContext outInMessage() {
			return GetRuleContext<OutInMessageContext>(0);
		}
		public MessageXContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_messageX; } }
	}

	[RuleVersion(0)]
	public MessageXContext messageX() {
		MessageXContext _localctx = new MessageXContext(Context, State);
		EnterRule(_localctx, 4, RULE_messageX);
		try {
			State = 171;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case EventSTRING:
			case SignalSTRING:
			case TokenSTRING:
			case DispatchSTRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 169; outOnlyMessage();
				}
				break;
			case RequestCapitalSTRING:
			case ReplySTRING:
			case InvitationSTRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 170; outInMessage();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OutOnlyMessageContext : ParserRuleContext {
		public DispatchContext dispatch() {
			return GetRuleContext<DispatchContext>(0);
		}
		public EventContext @event() {
			return GetRuleContext<EventContext>(0);
		}
		public SignalContext signal() {
			return GetRuleContext<SignalContext>(0);
		}
		public TokenContext token() {
			return GetRuleContext<TokenContext>(0);
		}
		public OutOnlyMessageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_outOnlyMessage; } }
	}

	[RuleVersion(0)]
	public OutOnlyMessageContext outOnlyMessage() {
		OutOnlyMessageContext _localctx = new OutOnlyMessageContext(Context, State);
		EnterRule(_localctx, 6, RULE_outOnlyMessage);
		try {
			State = 177;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DispatchSTRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 173; dispatch();
				}
				break;
			case EventSTRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 174; @event();
				}
				break;
			case SignalSTRING:
				EnterOuterAlt(_localctx, 3);
				{
				State = 175; signal();
				}
				break;
			case TokenSTRING:
				EnterOuterAlt(_localctx, 4);
				{
				State = 176; token();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OutInMessageContext : ParserRuleContext {
		public RequestContext request() {
			return GetRuleContext<RequestContext>(0);
		}
		public ReplyContext reply() {
			return GetRuleContext<ReplyContext>(0);
		}
		public InvitationContext invitation() {
			return GetRuleContext<InvitationContext>(0);
		}
		public OutInMessageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_outInMessage; } }
	}

	[RuleVersion(0)]
	public OutInMessageContext outInMessage() {
		OutInMessageContext _localctx = new OutInMessageContext(Context, State);
		EnterRule(_localctx, 8, RULE_outInMessage);
		try {
			State = 182;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case RequestCapitalSTRING:
				EnterOuterAlt(_localctx, 1);
				{
				State = 179; request();
				}
				break;
			case ReplySTRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 180; reply();
				}
				break;
			case InvitationSTRING:
				EnterOuterAlt(_localctx, 3);
				{
				State = 181; invitation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventContext : ParserRuleContext {
		public IToken name;
		public PHeadContext msg;
		public ITerminalNode EventSTRING() { return GetToken(QactorParser.EventSTRING, 0); }
		public ITerminalNode DuePuntiSTRING() { return GetToken(QactorParser.DuePuntiSTRING, 0); }
		public ITerminalNode ID() { return GetToken(QactorParser.ID, 0); }
		public PHeadContext pHead() {
			return GetRuleContext<PHeadContext>(0);
		}
		public EventContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_event; } }
	}

	[RuleVersion(0)]
	public EventContext @event() {
		EventContext _localctx = new EventContext(Context, State);
		EnterRule(_localctx, 10, RULE_event);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 184; Match(EventSTRING);
			State = 185; _localctx.name = Match(ID);
			State = 186; Match(DuePuntiSTRING);
			State = 187; _localctx.msg = pHead();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SignalContext : ParserRuleContext {
		public IToken name;
		public PHeadContext msg;
		public ITerminalNode SignalSTRING() { return GetToken(QactorParser.SignalSTRING, 0); }
		public ITerminalNode DuePuntiSTRING() { return GetToken(QactorParser.DuePuntiSTRING, 0); }
		public ITerminalNode ID() { return GetToken(QactorParser.ID, 0); }
		public PHeadContext pHead() {
			return GetRuleContext<PHeadContext>(0);
		}
		public SignalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_signal; } }
	}

	[RuleVersion(0)]
	public SignalContext signal() {
		SignalContext _localctx = new SignalContext(Context, State);
		EnterRule(_localctx, 12, RULE_signal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 189; Match(SignalSTRING);
			State = 190; _localctx.name = Match(ID);
			State = 191; Match(DuePuntiSTRING);
			State = 192; _localctx.msg = pHead();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TokenContext : ParserRuleContext {
		public IToken name;
		public PHeadContext msg;
		public ITerminalNode TokenSTRING() { return GetToken(QactorParser.TokenSTRING, 0); }
		public ITerminalNode DuePuntiSTRING() { return GetToken(QactorParser.DuePuntiSTRING, 0); }
		public ITerminalNode ID() { return GetToken(QactorParser.ID, 0); }
		public PHeadContext pHead() {
			return GetRuleContext<PHeadContext>(0);
		}
		public TokenContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_token; } }
	}

	[RuleVersion(0)]
	public TokenContext token() {
		TokenContext _localctx = new TokenContext(Context, State);
		EnterRule(_localctx, 14, RULE_token);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 194; Match(TokenSTRING);
			State = 195; _localctx.name = Match(ID);
			State = 196; Match(DuePuntiSTRING);
			State = 197; _localctx.msg = pHead();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DispatchContext : ParserRuleContext {
		public IToken name;
		public PHeadContext msg;
		public ITerminalNode DispatchSTRING() { return GetToken(QactorParser.DispatchSTRING, 0); }
		public ITerminalNode DuePuntiSTRING() { return GetToken(QactorParser.DuePuntiSTRING, 0); }
		public ITerminalNode ID() { return GetToken(QactorParser.ID, 0); }
		public PHeadContext pHead() {
			return GetRuleContext<PHeadContext>(0);
		}
		public DispatchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dispatch; } }
	}
